Roundcube Webmail SieveRules
============================

 * Improve (and simplify) folder name encoding in fileinto actions
 * Correct espacing of values (now done in the core)
 * Update config file var names to match core

Version 2.0 (2013-05-193, rc-1.0)
=================================================
 * Update default config for most common setups:
     sieverules_address_rules = FALSE
     sieverules_use_elsif = FALSE
 * Change file structure to match core and use include_path
 * Improve form submission
 * Add new config option "sieverules_address_rules" to toggle address/header command in tests
 * Improve default value setup - added sieverules_init hook
 * Add support for vacation-seconds extension
 **** code branching/tagging no longer sync'd to roundcube versions ****

Version 1.18 (2013-03-16, rc-0.9)
=================================================
 * Make vacation days parameter optional + move to advanced options
 * Show name and state of currently selected ruleset when multiple rulesets enabled
 * Automatically activate first ruleset even when multiple rulesets enabled
 * Add option to use "friendly" names in :from params
 * Rename default skin to classic (c40419bdfe)
 * rcube_ui > rcube_utils (r6091)
 * Update for Roundcube framework
 * Add advanced options for editheader extension to UI
 * Add basic support for editheader extension

Version 1.17 (2012-07-07, rc-0.8)
=================================================
 * Add sieverules_load hook
 * Update after r5781
 * Add inital support for Larry

Version 1.16 (2012-01-21, rc-0.8)
=================================================
 * Update code to use new timezone format (r5707)
 * Respect settings for html editor from core
 * Fix display for radio and checkboxes in notify action
 * Use core function to sanitize input

Version 1.15 (2011-12-04, rc-0.7)
=================================================
 * Fix escaping if lines starting with . in vacation message